--- a/config/template_config.yml
+++ b/config/template_config.yml
@@ -2,5 +2,7 @@
 :PrivateDir: Private
 :ServerPort: 9999
 :Database:
-  :Name: northwind.db
+  :Username: MyUser
   :Password: TemplateYourPasswordHere
+  :Host: MyHost
+  :DatabaseName: MyDatabaseName
